<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IDPJetpackAndroid</string>
    <string name="score">Score</string>
    <string name="goal_a">Goal to team a</string>
    <string name="goal_b">Goal to team b</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="details">Match details</string>
    <string name="go_kudato">go kudato</string>
    <string name="save">save</string>
    <string name="go_home">go to the start position</string>
    <string name="your_team_name">Your Team Name</string>
    <string name="somewhere_title">It`s a team name that u typed</string>

    <string name="downloading">Downloading…</string>
    <string name="downloading_title">Downloading in progress</string>
    <string name="download">download image</string>

</resources>