<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.team_b.TeamBFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:drawableEndCompat="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/your_team_name" />

    <TextView
        android:id="@+id/teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/team_b"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scoreTeamB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teamA" />

    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/teamB"
        app:layout_constraintEnd_toStartOf="@+id/teamB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teamB" />

    <TextView
        android:id="@+id/scoreTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/action"
        app:layout_constraintEnd_toEndOf="@+id/teamA"
        app:layout_constraintStart_toStartOf="@+id/teamA"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text=" 0" />

    <TextView
        android:id="@+id/scoreTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/action"
        app:layout_constraintEnd_toEndOf="@+id/teamB"
        app:layout_constraintStart_toStartOf="@+id/teamB"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text=" 0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/goal_a" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/details"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/action" />
</androidx.constraintlayout.widget.ConstraintLayout>